--- a/forms.html
+++ b/forms.html
@@ -7,8 +7,8 @@
 
 
 
-    <link rel="stylesheet" href="/./Guitar Renter/formStyle.css">
-    <link rel="stylesheet"  href="/./Guitar Renter/response.css">
+    <link rel="stylesheet" href="/./Guitar-Renter/formStyle.css">
+    <link rel="stylesheet"  href="/./Guitar-Renter/response.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
